// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic: valid-package.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"something\\";

exports.default = index;
"
`;

exports[`basic: valid-package.esm.js 1`] = `
"var index = \\"something\\";

export default index;
"
`;

exports[`basic: valid-package.min.js 1`] = `
"!function(e,t){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?module.exports=t():\\"function\\"==typeof define&&define.amd?define(t):e.validPackage=t()}(this,function(){\\"use strict\\";return\\"something\\"});
//# sourceMappingURL=valid-package.min.js.map
"
`;

exports[`basic: valid-package.min.js.map 1`] = `"{\\"version\\":3,\\"file\\":\\"valid-package.min.js\\",\\"sources\\":[\\"../src/index.js\\"],\\"sourcesContent\\":[\\"// @flow\\\\n\\\\nexport default \\\\\\"something\\\\\\";\\\\n\\"],\\"names\\":[],\\"mappings\\":\\"8LAEe\\"}"`;

exports[`monorepo: package-one.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 1;

exports.default = index;
"
`;

exports[`monorepo: package-one.esm.js 1`] = `
"var index = 1;

export default index;
"
`;

exports[`monorepo: package-two.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = 2;

exports.default = index;
"
`;

exports[`monorepo: package-two.esm.js 1`] = `
"var index = 2;

export default index;
"
`;

exports[`no module: no-module.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = \\"this does not have a module build\\";

exports.default = index;
"
`;
